--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,12 @@
     "keywords": ["buster", "laravel", "nginx", "cache", "proxy", "fastcgi"],
     "homepage": "https://github.com/MelonSmasher/Buster",
     "license": "MIT",
-    "authors": [{
-        "name": "Alex Markessinis",
-        "email": "markea125@gmail.com"
-    }],
+    "authors": [
+        {
+            "name": "Alex Markessinis",
+            "email": "markea125@gmail.com"
+        }
+    ],
     "support": {
         "issues": "https://github.com/MelonSmasher/Buster/issues",
         "source": "https://github.com/MelonSmasher/Buster"
@@ -18,6 +20,7 @@
         "chrisbjr/api-guard": "4.*",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
+        "jeremykenedy/laravel-users": "^1.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1"
