--- a/support/buster-worker.conf
+++ b/support/buster-worker.conf
@@ -1,9 +1,8 @@
 [program:buster-worker]
-process_name=%(program_name)s_%(process_num)02d
-command=php /home/nginx/Buster/artisan queue:work --sleep=3 --tries=5
+process_name=%(program_name)s
+command=php /home/nginx/Buster/artisan horizon
 autostart=true
 autorestart=true
 user=nginx
-numprocs=8
 redirect_stderr=true
 stdout_logfile=/home/nginx/Buster/storage/logs/worker.log
