--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "jeremykenedy/laravel-users": "^3.1",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "^2.0",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1"
     },
